<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">inYte</string>
    <string name="app_launcher_name">inYte</string>
    <string name="default_phone_app_prompt">Please make this app the default Phone app</string>
    <string name="could_not_access_contacts">Could not access your contacts</string>
    <string name="no_previous_calls">No previous calls have been found</string>
    <string name="could_not_access_the_call_history">Could not access the call history</string>
    <string name="request_access">Request access</string>
    <string name="remove_confirmation">Are you sure you want to remove the selected items from the Call History?</string>
    <string name="clear_history_confirmation">Are you sure you want to remove everything from the Call History?</string>
    <string name="send_sms">Send SMS</string>
    <string name="show_grouped_calls">Show grouped calls</string>
    <string name="clear_call_history">Clear call history</string>
    <string name="dialpad">Dialpad</string>
    <string name="dialer">Dialer</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="unknown_caller">Unknown Caller</string>
    <string name="is_calling">Is Calling…</string>
    <string name="dialing">Dialing…</string>
    <string name="call_ended">Call Ended</string>
    <string name="call_ending">Call Ending</string>
    <string name="ongoing_call">Ongoing Call</string>
    <string name="select_sim">Select a SIM for this call</string>
    <string name="always_use_this_sim">Always use this SIM for this number</string>
    <string name="unset_default_sim">Unset default SIM</string>
    <string name="speed_dial">Speed dial</string>
    <string name="manage_speed_dial">Manage speed dial</string>
    <string name="speed_dial_label">Click on a number to assign a contact to it. You can then quickly call the given contact by long pressing the given number at the dialer.</string>
    <string name="missedcalllog">Missed Calls</string>
    <string name="group_subsequent_calls">Group subsequent calls with the same number at the call log</string>
    <string name="app_title">Simple Dialer - Manage your phone calls easily</string>
    <string name="app_short_description">A handy phone call manager with phonebook, number blocking and multi-SIM support</string>
    <string name="app_long_description">
        A lightweight app for handling your calls, no matter where are you. Comes with a handy call log for easy call initiation.

        There is a quick dialpad at your service too, with smart contact suggestions. It supports letters too.

        You can easily block phone numbers to avoid unwanted incoming calls.

        Supported Speed dialing makes calling your favorite contacts with this true phone a breeze.

        To help you manage your calls quickly the Phone app also supports favorite contacts and creating shortcuts of any contact on the home screen.

        It comes with material design and dark theme by default, provides great user experience for easy usage. The lack of internet access gives you more privacy, security and stability than other apps.

        Contains no ads or unnecessary permissions. It is fully opensource, provides customizable colors.

        <b>Check out the full suite of Simple Tools here:</b>
        https://www.simplemobiletools.com

        <b>Facebook:</b>
        https://www.facebook.com/simplemobiletools

        <b>Reddit:</b>
        https://www.reddit.com/r/SimpleMobileTools
    </string>
    <string name="this_will_only_take_a_bit">This will only take a bit</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="vijay">Vijay</string>
    <string name="Kishor" />
    <string name="last_name">Last Name</string>
    <string name="example_example_com">example@example.com</string>
    <string name="mobilenumber">Mobile Number</string>
    <string name="your_mobile_number">Your Mobile Number</string>
    <string name="inamdar">Inamdar</string>
    <string name="sign_up">Sign Up</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="outgoing_call">Outgoing Call</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_with">Chat With...</string>
    <string name="chats">Chats</string>
    <string name="type_a_message">Type a message...</string>
    <string name="im">IM</string>
    <string name="available">Available</string>
    <string name="lastseenat">Last Seen:</string>
    <string name="lastseen">\"Last seen at \"</string>
    <string name="verify_your_phone_number">Verify your phone number</string>
    <string name="you_will_receive_an_otp_on_this_phone_number">You will receive an OTP on this phone number</string>
    <string name="_91">+91</string>
    <string name="_1234567890">1234567890</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_received_otp">Enter received OTP</string>
    <string name="didn_t_receive_an_otp">Didn\'t receive an OTP?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify">Verify</string>
    <string name="didn_t_receive_an_ot">Didn\'t receive an OTP?</string>
    <string name="Cancel">Cancel</string>
    <string name="John">John</string>
    <string name="Doe">Doe</string>
    <string name="dropbox_app_key"></string>
    <string name="ongoing_notification_title">Ongoing meeting</string>
    <string name="ongoing_notification_text">You are currently in a meeting. Tap to return to it.</string>
    <string name="ongoing_notification_action_hang_up">Hang up</string>
    <string name="ongoing_notification_action_mute">Mute</string>
    <string name="ongoing_notification_action_unmute">Unmute</string>
    <string name="ongoing_notification_channel_name">Ongoing Conference Notifications</string>
    <string name="callyourightback">I\'ll call you right back.</string>
    <string name="callyoulater">I\'ll call you later.</string>
    <string name="canttalknow">Can\'t talk now.</string>
    <string name="custom">Send custom message...</string>
    <string name="inyte_video_call">InYte Video Call</string>
    <string name="slider_one_substring" translatable="false"> Make it easy HD video call to <br/> start, join, and collaborate <br/> across any device</string>
    <string name="p2p_video_call" translatable="false">P2P Video Call</string>
    <string name="rich_call_data" translatable="false">Rich Call Data</string>
    <string name="slider_two_substring" translatable="false">Make call with explicit context like <br/> logos, images, location information, <br/> the call reason, among many others </string>
    <string name="conference_video_call" translatable="false">Conference Video Call</string>
    <string name="slider_three_substring" translatable="false">Make HD audio conference calls <br/> with video conferencing and screen sharing</string>
    <string name="next_slide" translatable="false"> Next </string>
    <string name="preference_file_key" translatable="false">slide_state_save</string>
    <string name="hint" tools:ignore="ExtraTranslation"><i>Type RCD Text</i></string>
</resources>