<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".Activities.receiveOTP">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_130sdp"
            android:layout_marginTop="@dimen/_80sdp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/logo"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/verify_your_phone_number"
            android:textColor="@color/OTPcolorPrimaryText"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:gravity="center"
            android:text="@string/you_will_receive_an_otp_on_this_phone_number"
            android:textColor="@color/OTPcolorTextSecondary"
            android:textSize="14sp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:gravity="center"
            android:textSize="14sp"
            android:text="Enter your phone number"
            android:textColor="@color/OTPcolorTextSecondary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_60sdp"
            android:layout_marginEnd="@dimen/_60sdp"
            android:gravity="center"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/countryFlag"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                app:srcCompat="@drawable/amp_logo" />

             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/countryCode"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/_40sdp"
                 android:gravity="center"
                 android:text="@string/_91"
                 android:textColor="@color/OTPcolorPrimaryText"
                 android:textSize="16sp"
                 android:textStyle="bold"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:id="@+id/inputMobileNumber"
                android:background="@null"
                android:hint="@string/_1234567890"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/OTPcolorPrimaryText"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="@dimen/_70sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_70sdp"
            android:background="@color/colorDivider"/>
      <FrameLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/getOTP"
            android:layout_margin="@dimen/_30sdp"
            android:background="@drawable/background_button"
            android:text="@string/get_otp"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"/>


          <ProgressBar
              android:layout_width="@dimen/_40sdp"
              android:layout_height="@dimen/_40sdp"
              android:id="@+id/progressBar"
              android:layout_gravity="center"
              android:visibility="gone"/>


      </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/cancelOTPAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_button"
                android:text="@string/Cancel"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</ScrollView>
