<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".signUp.signUp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:id="@+id/layoutHeader"
        android:background="@color/OTPcolorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        app:layout_constraintTop_toTopOf="parent">
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text = "@string/this_will_only_take_a_bit"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_15ssp"/>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                app:cardCornerRadius="@dimen/_4sdp"
                android:id="@+id/cardSignUp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/_4sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:includeFontPadding="false"
                        android:text="@string/first_name"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_11ssp" />

                    <EditText
                        android:id="@+id/inputFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:hint="@string/John"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:textColor="@color/colorPrimaryText"
                        android:textColorHint="@color/colorHintText"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:includeFontPadding="false"
                        android:text="@string/last_name"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_11ssp" />

                    <EditText
                        android:id="@+id/inputLastName"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:hint="@string/Doe"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:textColor="@color/colorPrimaryText"
                        android:textColorHint="@color/colorHintText"
                        android:textSize="@dimen/_13ssp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:includeFontPadding="false"
                        android:text="@string/email"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_11ssp" />

                    <EditText
                        android:id="@+id/inputEmail"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:hint="@string/example_example_com"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorPrimaryText"
                        android:textColorHint="@color/colorHintText"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:includeFontPadding="false"
                        android:text="@string/mobilenumber"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_11ssp" />

                    <EditText
                        android:id="@+id/inputMobile"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:hint="@string/your_mobile_number"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="phone"
                        android:textColor="@color/colorPrimaryText"
                        android:textColorHint="@color/colorHintText"
                        android:textSize="@dimen/_13ssp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:includeFontPadding="false"
                    android:text="@string/sign_up"
                    android:textColor="@color/OTPcolorPrimary"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintTop_toBottomOf="@id/cardSignUp"/>

                <ProgressBar
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:id="@+id/signUpProgressBar"
                    android:layout_gravity="center"
                    android:visibility="invisible"/>

            </FrameLayout>



        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
